<resources>
    <string name="app_name">Forum Belajar</string>
    <string name="firebase">https://forum-belajar.firebaseio.com/</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="IdLPIA">No. Id LPIA</string>
    <string name="BirthPlace">Birth Place</string>
    <string name="BirthDate">Birth Date</string>
    <string name="NoHandphone">No Handphone</string>
    <string name="Address">Address</string>
    <string name="Register">Register</string>
    <string name="Forum">Forum</string>
    <string name="Belajar">Belajar</string>
    <string name="AddQuestion">Add Question</string>
    <string name="SearchQuestion">Search Question</string>
    <string name="TitleQuestion">Title Question</string>Question
    <string name="Question">Question</string>
    <string name="UploadPhoto">Upload Photo</string>
    <string name="Submit">Submit</string>
    <string name="TimelineBackground">Timeline Background</string>
    <string name="ProfilePicture">Profile Picture</string>
    <string name="Score">Score</string>
    <string name="DefaultScore">0</string>
    <string name="ChoosePhoto">Choose Photo</string>
    <string name="YourAnswerHere">Your Answer Here</string>
</resources>
