<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:id="@+id/username"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Username"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/Password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/no_id"
        android:layout_gravity="center_horizontal"
        android:hint="@string/IdLPIA"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tempat_lahir"
        android:layout_gravity="center_horizontal"
        android:hint="@string/BirthPlace"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tanggal_lahir"
        android:hint="@string/BirthDate"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/no_telp"
        android:hint="@string/NoHandphone"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPostalAddress"
        android:id="@+id/alamat"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Address"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="150dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Register"
        android:id="@+id/submit_register"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style_2"
        android:textColor="#ffffff" />

</LinearLayout>