<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/TimelineBackground"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background"
        android:contentDescription="@string/TimelineBackground"/>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-75dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ProfilePicture"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ProfilePicture"
        android:src="@drawable/profile"
        android:background="@drawable/rounded"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="20dp"
        android:weightSum="4"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img1"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/img1"
                android:contentDescription="@string/ProfilePicture" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/score1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/Score"
                android:text="@string/DefaultScore"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img2"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/img2"
                android:contentDescription="@string/ProfilePicture" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/score2"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/Score"
                android:text="@string/DefaultScore"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img3"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/img3"
                android:contentDescription="@string/ProfilePicture" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/score3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/Score"
                android:text="@string/DefaultScore"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_weight="1">
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img4"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/img4"
                android:contentDescription="@string/ProfilePicture" />
            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/score4"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/Score"
                android:text="@string/DefaultScore"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_your_question" />
    </ScrollView>

</LinearLayout>